<resources>
    <string name="app_name">New Media</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_smooth_scroll">Smooth scroll</string>
    <string name="btn_transition_time">Transition time</string>
    <string name="btn_next">التالى</string>
    <string name="btn_back">السابق</string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_enter_moneyGet">من فضلك أدخل العربون</string>
    <string name="please_enter_moneyRest">من فضلك أدخل المبلغ المتبقى</string>
    <string name="printPdf">إصدار المستند</string>
    <string name="please_enter_all_data">من فضلك أدخل بيانات العميل كاملة</string>
    <string name="noPk_added">لا توجد باقات مضافة</string>
    <string name="share">مشاركة</string>
    <string name="meter_count">عدد الأمتار</string>
    <string name="price">السعر</string>
    <string name="fullMoney">المبلغ كامل</string>
    <string name="noRest">لاشيئ</string>
    <string name="total_price">المبلغ </string>
    <string name="sort">ترتيب</string>
    <string name="photo">التصوير</string>
    <string name="theater">مسارح</string>
    <string name="screen">شاشات</string>
    <string name="previous">السابق</string>
    <string name="remove_order">حذف حجز</string>
    <string name="please_enter_order_number">من فضلك ادخل رقم الحجز</string>
    <string name="order_number">رقم الحجز</string>
    <string name="cancel">إلغاء</string>
    <string name="remove_done">تم الحذف بنجاح</string>
    <string name="remove_in_progress">جارى الحذف</string>
    <string name="past_order">الحجوزات السابقة</string>
    <string name="photo_order">حجوزات التصوير</string>
    <string name="photo_calendare">تحديد شهر</string>
    <string name="new_order">طلب جديد</string>
    <string name="client_name">إسم العميل</string>
    <string name="money_get">العربون</string>
    <string name="money_rest">المتبقى</string>
    <string name="items">العناصر</string>
    <string name="money_get_way">طريقة الدفع</string>
    <string name="place">المكان</string>
    <string name="mobile_number">رقم الجوال</string>
    <string name="date">الموعد</string>
    <string name="do_you_sure_remove_order">هل متأكد من حذف هذا الحجز</string>
    <string name="yes">نعم</string>
    <string name="cannot_delete_theater">لا يمكن مسح هذا المسرح</string>
    <string name="theater_removed_successfully">تم مسح المسرح بنجاح</string>
    <string name="cannot_removed_photo">لا يمكن مسح هذه الصوره</string>
    <string name="orde_removed">تم حذف الحجز بنجاح</string>
    <string name="cannot_delete">لا يمكن حذف هذا الحجز</string>
    <string name="rank">م</string>
    <string name="month">شهر</string>
    <string name="year">السنه</string>
    <string name="filter">ترشيح</string>
    <string name="no_order_date">لاتوجد طلبات بهذا التاريخ</string>
    <string name="department">القسم</string>
    <string name="income">الإيرادات</string>
    <string name="music">الإنتاج الصوتى</string>
    <string name="montag">المونتاج</string>
    <string name="total">الإجمالى</string>
    <string name="total_income">إجمالى الإبرادات خلال كل الأشهر</string>
    <string name="error">حدث خطأ</string>
    <string name="employees">الموظفين</string>
    <string name="error_input">من فضلك ادخل المعلومات</string>
    <string name="insert_items">من فضلك ادخل العناصر</string>
    <string name="sort_ascending">Sort Ascending</string>

    <string name="sort_descending">Sort Descending</string>

    <string name="clear_sorting">Clear</string>

    <string name="row_show">Show 5. Row</string>

    <string name="row_hide">Hide 5. Row</string>
    <string name="contract">العقد</string>
    <string name="sound_removed">تم مسح هذا الطلب الصوتى</string>
    <string name="montage_delete">تم حذف مونتاج</string>
    <string name="removed_in_order">تم حذف هذا العقد من الطلبات</string>
</resources>

