<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top"
                android:gravity="right|center"
                android:id="@+id/filterRl">
                <ImageView
                    android:id="@+id/btnFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/yearSpinner"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:fontFamily="@font/merssi_semibold"
                    android:textColor="#000"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthSpinner"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:fontFamily="@font/merssi_semibold"
                    android:textColor="#000"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tip_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merssi_semibold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="7dp"
            android:text="@string/total_income"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/income"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:textColor="@color/blue"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/blue"
                        android:text="@string/department"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:id="@+id/photoDep"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/photo"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/musicDep"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/music"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/montagDep"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/montag"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/theaterDep"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/theater"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/screenDep"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/screen"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_margin="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#dfe6e9"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/totalDep"
                        android:text="0"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/total"
                        android:fontFamily="@font/merssi_semibold"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>