<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_margin="25dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="50dp"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:fontFamily="@font/merssi_req"
                        android:id="@+id/title"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_you_sure_remove_order" />
                    <EditText
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_offline_color"
                        android:padding="10dp"
                        android:id="@+id/order_edittext"
                        android:hint="@string/order_number"
                        android:fontFamily="@font/merssi_req"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="7dp"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:weightSum="2">
                       <Button
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:id="@+id/postive_btn"
                           android:layout_weight="1"
                           android:background="@drawable/border_online"
                           android:text="@string/yes"
                           android:fontFamily="@font/merssi_req"
                           android:textColor="#fff"
                           android:layout_margin="7dp"
                           android:textSize="17sp"/>
                       <Button
                           android:layout_margin="7dp"
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:id="@+id/negative_button_btn"
                           android:layout_weight="1"
                           android:background="@drawable/border_offline_color"
                           android:text="@string/cancel"
                           android:fontFamily="@font/merssi_req"
                           android:textColor="@color/colorPrimary"
                           android:textSize="17sp"/>
                   </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="3dp"
            android:id="@+id/pkIamge"
            android:elevation="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/nlogo"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>